# codex_02

./: .env.example  .gitignore  AGENTS.md  README.md  docker-compose.yml
backend/: README.md  pyproject.toml  requirements-dev.txt  requirements.txt
backend/app/: __init__.py  config.py  database.py  main.py  models.py  seed.py
backend/app/services/: __init__.py  cre_document_analyzer.py  document_text_extractor.py  edinet_client.py  ir_document_fetcher.py  ir_settings.py  reporting.py  scoring.py  signal_extraction.py
backend/tests/: test_companies_api.py  test_company_detail_api.py  test_company_report_api.py  test_frontend_ui_static.py  test_health.py  test_ir_pipeline_api.py  test_ir_pipeline_phase4b.py  test_report_generation.py  test_scoring.py  test_signal_extraction.py
frontend/: README.md  next-env.d.ts  package-lock.json  package.json  tsconfig.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: CompanyDetail.tsx  CompanyRankTable.tsx  IRPipelinePanel.tsx  MetricCard.tsx  ScoreBreakdown.tsx  SignalCard.tsx
frontend/src/lib/: api.ts
frontend/src/types/: api.ts
